# tatarby

./: .gitignore
backend/: .env.example  pyproject.toml
backend/app/: create_app.py  main.py
backend/app/api/: __init__.py  error_handlers.py
backend/app/api/speech/: router.py  service.py
backend/app/core/: config.py
backend/app/core/schemas/: speech.py
backend/assets/: Ru-Tat.xlsx
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  constants.js  main.jsx
frontend/src/api/: axiosInstance.js
frontend/src/components/: MainRoutes.jsx  PrivateRoute.jsx
frontend/src/components/Header/: Header.jsx  Header.module.css
frontend/src/components/Home/: Home.jsx  Home.module.css
frontend/src/components/Profile/: Profile.jsx  Profile.module.css
frontend/src/components/Repet/: Repet.jsx  Repet.module.css
frontend/src/components/Streak/: Streak.jsx  Streak.module.css
frontend/src/components/Translate/: Translate.jsx  Translate.module.css
frontend/src/pages/: About.jsx  Admin.jsx  Home.jsx  Login.jsx  Profile.jsx  Repet.jsx  Translate.jsx
frontend/src/stores/: ChatStore.js  RootStore.js  RootStoreContext.jsx  TokenStore.js
frontend/src/styles/: index.css
