[tool.poetry]
name = "tatarby"
version = "0.1.0"
authors = ["nlsnnn <egor.larrr@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = {extras = ["standard"], version = "^0.116.1"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.43"}
pydantic-settings = "^2.10.1"
pandas = "^2.3.2"
gradio-client = "^1.13.0"
openpyxl = "^3.1.5"
datasets = "^4.0.0"
alembic = "^1.16.5"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"